Fixes Issue #135: Overflowing of card content on mobile screen

--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ section {
 .container .box .content {
     position: relative;
     left: 0;
-    padding: 20px 40px;
+    padding: 20px;
     text-align: center;
     transition: 0.5s;
 }
@@ -236,7 +236,6 @@ section {
 .container .box .content h2 {
     font-size: 25px;
     color: var(--ternary);
-    margin-top: 21px;
     text-decoration: underline dashed;
     cursor: pointer;
 }
@@ -254,8 +253,8 @@ section {
     font-size: 21px;
     font-weight: 900;
     color: var(--ternary);
-    margin-top: 21px;
-    margin-bottom: 10px;
+    /* margin-top: 21px;
+    margin-bottom: 10px; */
     padding: 9px 14px;
     border-radius: 36px;
     background-color: var(--light);
@@ -273,8 +272,8 @@ section {
     width: 36px;
     font-weight: 900;
     color: var(--ternary);
-    margin-top: 45px;
-    margin-right: -25px;
+    /* margin-top: 45px;
+    margin-right: -25px; */
     border-radius: 25px;
     background-color: var(--light);
     border: 4px solid var(--primary);
@@ -282,6 +281,13 @@ section {
 
 .container .box .content img:hover {
     transform: rotate(10deg);
+}
+/* Fixes #135 */
+.card-footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 20px;
 }
 
 /* Footer Css */
